--- a/intelligent_cinema/index.html
+++ b/intelligent_cinema/index.html
@@ -7,7 +7,7 @@
     <title>intelligent_cinema</title>
 </head>
 
-<body <h1>登陆界面 </h1>
+<body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
